quick-start/base/quick-start.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-start
  labels:
    app.openshift.io/runtime: quarkus
    app: quick-start
    app-with-metrics: quick-start

spec:
  replicas: 3
  selector:
    matchLabels:
      app: quick-start
  template:
    metadata:
      labels:
        app: quick-start
        version: v1
    spec:
      containers:
        - name: quarkus-getting-started
          image: quay.io/mcombi/quarkus-getting-started:latest
          ports:
            - containerPort: 8080
              protocol: TCP
              name: tpc-port
